<resources>
    <string name="app_name">Music Player</string>
    <string name="albums">ALBUMS</string>
    <string name="artists">ARTISTS</string>
    <string name="folders">FOLDERS</string>
    <string name="genres">GENRES</string>
    <string name="songs">SONGS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>